@@ -1,15 +1,29 @@
 package info.kgeorgiy.ja.Presniakov_Arsenii.arrayset;
 
-import java.util.*;
+import java.util.AbstractSet;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Iterator;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Objects;
+import java.util.SortedSet;
+import java.util.TreeSet;
 
 public class ArraySet<E> extends AbstractSet<E> implements SortedSet<E> {
+
+    private final List<E> elements;
+    private final Comparator<? super E> comparator;
+
     public ArraySet() {
         this.elements = Collections.unmodifiableList(new ArrayList<>());
         this.comparator = null;
     }
 
     public ArraySet(Collection<? extends E> collection) {
-         this(collection, null);
+        this(collection, null);
     }
 
     public ArraySet(Collection<? extends E> collection, Comparator<? super E> comparator) {
@@ -42,36 +56,43 @@ public class ArraySet<E> extends AbstractSet<E> implements SortedSet<E> {
     @SuppressWarnings("unchecked")
     @Override
     public SortedSet<E> subSet(E fromElement, E toElement) {
+        // :NOTE: ternary operator in if
         if (comparator == null
                 ? ((Comparator<E>) Comparator.naturalOrder()).compare(fromElement, toElement) > 0
                 : comparator.compare(fromElement, toElement) > 0)
+        // :TO-IMPROVE: message
+        {
             throw new IllegalArgumentException();
+        }
 
-        return subSetIndex(upperbound(fromElement), upperbound(toElement));
+        return subSetIndex(upperBound(fromElement), upperBound(toElement));
     }
 
     @Override
     public SortedSet<E> headSet(E toElement) {
-        return subSetIndex(0, upperbound(toElement));
+        return subSetIndex(0, upperBound(toElement));
     }
 
     @Override
     public SortedSet<E> tailSet(E fromElement) {
-        return subSetIndex(upperbound(fromElement), size());
+        return subSetIndex(upperBound(fromElement), size());
     }
 
     @Override
     public E first() {
-        if (isEmpty())
+        // :NOTE: style {}
+        if (isEmpty()) {
             throw new NoSuchElementException();
-        return elements.get(0);
+        }
+        return elements.getFirst();
     }
 
     @Override
     public E last() {
-        if (isEmpty())
+        if (isEmpty()) {
             throw new NoSuchElementException();
-        return elements.get(size() -1);
+        }
+        return elements.get(size() - 1);
     }
 
     @Override
@@ -85,8 +106,9 @@ public class ArraySet<E> extends AbstractSet<E> implements SortedSet<E> {
         return !isEmpty() && Collections.binarySearch(elements, (E) Objects.requireNonNull(o), comparator) >= 0;
     }
 
-
-    private int upperbound(E element) {
+    // :TO-IMPROVE: naming
+    // :NOTE: ambigous naming
+    private int upperBound(E element) {
         int index = Collections.binarySearch(elements, Objects.requireNonNull(element), comparator);
         if (index < 0) {
             return -(index + 1);
@@ -98,7 +120,4 @@ public class ArraySet<E> extends AbstractSet<E> implements SortedSet<E> {
     private SortedSet<E> subSetIndex(int begin, int end) {
         return new ArraySet<>(elements.subList(begin, end), comparator());
     }
-
-    private final List<E> elements;
-    private final Comparator<? super E> comparator;
 }
